plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

jacoco {
	toolVersion = "0.8.11"
}

tasks.test {
	useJUnitPlatform()
	finalizedBy jacocoTestReport  // génère le rapport après les tests
}

tasks.jacocoTestReport {
	dependsOn test  // s'assure que les tests tournent avant
	reports {
		html.required = true
		html.outputLocation = layout.buildDirectory.dir("reports/jacoco/html")
		xml.required = true   // utile pour les outils CI/CD
		csv.required = false
	}
	// Exclure les classes qui n'ont pas besoin d'être couvertes
	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					'**/dto/**',           // DTOs — getters/setters inutiles à tester
					'**/*Application*',    // classe main Spring Boot
					'**/config/**',        // configuration Spring
					'**/*Exception*'       // exceptions simples
			])
		}))
	}
}


group = 'com.mehdi.taskflow'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// JPA / Hibernate
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'
	// Flyway
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// Swagger / OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
	// Test
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
